# sample-apps

./: .gitignore  package-lock.json  readme.md
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml
EBT/: README.md
EBT/face_recognition/: .gitignore  README.md  fr_with_endpoints.py  fr_with_sdk.py  main.py
EBT/temperature_alerts/: README.md  email.py  main.py  send_text.py
EBT/temperature_detection_frontend/: Dockerfile  README.md
age-analytics/: README.md
age-detection/: README.md  download_yt_vid.py
age-predict-webapp/: package-lock.json  package.json  readme.md
age-predict-webapp/frontend/: package-lock.json  package.json
age-predict-webapp/server/: package.json  predict.js  readme.md  server.js
age-predict-webapp/src/: App.js
cpp_sdk/: .gitignore  CMakeLists.txt  README.md
cpp_sdk/cpp_dist_bundle/: images  readme.md
cpp_sdk/cpp_dist_bundle/benchmarks/: CMakeLists.txt  README.md  benchmark.cpp  benchmark.h  benchmark_1N_identification.cpp  benchmark_blink_detection.cpp  benchmark_detailed_landmark_detection.cpp  benchmark_face_image_blur_detection.cpp  benchmark_face_image_orientation_detection.cpp  benchmark_face_landmark_detection.cpp  benchmark_face_recognition.cpp  benchmark_face_template_quality_estimator.cpp  benchmark_glasses_detection.cpp  benchmark_head_orientation.cpp  benchmark_mask_detection.cpp  benchmark_object_detection.cpp  benchmark_preprocess_image.cpp  benchmark_spoof_detection.cpp  memory_high_water_mark.cpp  memory_high_water_mark.h  observation.cpp  observation.h  sdkfactory.cpp  sdkfactory.h  stopwatch.h
cpp_sdk/cpp_dist_bundle/c++/: CMakeLists.txt  active_spoof.cpp  blink_detection.cpp  detect_eyeglasses.cpp  detect_mask.cpp  face_recognition_1_1.cpp  face_recognition_1_1_image_buffer.cpp  object_detection.cpp  readme.md  spoof_detection.cpp
cpp_sdk/cpp_dist_bundle/c++/3rd_party_libs/: .gitignore  build_opencv.sh
cpp_sdk/cpp_dist_bundle/c++/gpu_sample_apps/: batch_fr_cuda.cpp  face_detect_image_in_vram.cpp  face_recognition_image_in_vram.cpp
cpp_sdk/cpp_dist_bundle/c++/identification_1_n/: enroll_in_database.cpp  identification_1_n.cpp  multiple_collections.cpp
cpp_sdk/cpp_dist_bundle/c++/tools/: aarch64-linux-gnu.toolchain.cmake  arm-linux-gnueabihf.toolchain.cmake
cpp_sdk/facial_recognition/: CMakeLists.txt
cpp_sdk/facial_recognition/11/: CMakeLists.txt  README.md
cpp_sdk/facial_recognition/11/src/: main.cpp
cpp_sdk/facial_recognition/1N/: .gitignore  CMakeLists.txt  README.md
cpp_sdk/facial_recognition/1N/src/: main.cpp
cpp_sdk/facial_recognition/1N_threadpool_cpu/: CMakeLists.txt  README.md
cpp_sdk/facial_recognition/1N_threadpool_cpu/src/: main.cpp
cpp_sdk/facial_recognition/blur/: CMakeLists.txt  README.md
cpp_sdk/facial_recognition/blur/src/: main.cpp
cpp_sdk/head_orientation/: CMakeLists.txt  README.md
cpp_sdk/landmark_detection/: CMakeLists.txt  README.md
cpp_sdk/landmark_detection/draw_landmarks_save_images/: CMakeLists.txt  README.md
cpp_sdk/landmark_detection/draw_landmarks_save_images/src/: main.cpp
cpp_sdk/landmark_detection/live_streaming/: CMakeLists.txt  README.md
cpp_sdk/landmark_detection/live_streaming/src/: main.cpp
cpp_sdk/landmark_detection/src/: main.cpp
cpp_sdk/object_detection/: CMakeLists.txt  README.md
cpp_sdk/object_detection/src/: main.cpp
cpp_sdk/object_tracking/: CMakeLists.txt
cpp_sdk/trueface_sdk/: .gitignore  README.md
cpp_sdk/video_analyze/: CMakeLists.txt  README.md
face_recognition/: create_collection.py  fr_with_blur.py  identify_video.py  readme.md  trump_collection.npz
face_recognition/fr_mjpeg_server_biggest_face_live_system_stats/: main.py  main.py.bu
face_recognition/fr_mjpeg_server_live_stats/: utils.py
face_recognition/fr_mjpeg_server_live_stats_jetson/: main.py
face_recognition/identify_with_blur/: fr_with_blur.py
heatmaps/: demo.py  readme.md
isamples/: README.md
isamples/isamples/: AboutViewController.swift  AppDelegate.swift  EnrollViewController.swift  FRViewController.swift  FaceDetectionViewController.swift  Info.plist  ManagePeopleViewController.swift  SDKManager.swift  SceneDelegate.swift  SpoofViewController.swift  ViewController.swift  isamples-Bridging-Header.h
isamples/isamples.xcodeproj/: project.pbxproj
isamples/isamplesTests/: isamplesTests.swift
isamples/isamplesUITests/: isamplesUITests.swift  isamplesUITestsLaunchTests.swift
object-detection/: demo.py  download_mobilenet.sh  readme.md
object-detection/tf-object_detection-mobilenet/: model.trueface
ptop/passive-spoof/: main.py
python/: .gitignore  README.md  images
python/active_spoof_frontend_app/: .gitignore  README.md  active_spoof.py
python/face_recognition_1_n_rtsp_server/: README.md  enroll_in_database.py  identify_video.py  run_1_n_identification_rtsp_server.py  run_1_n_identification_rtsp_server.sh
python/python_dist_bundle/: .gitignore  active_spoof.py  blink_detection_live_streaming.py  blur_live_streaming.py  body_face_pose_live_streaming.py  body_pose_estimation.py  body_pose_live_streaming.py  chip_extraction.py  detect_eyeglasses.py  detect_mask.py  detect_spoof.py  face_landmarks_live_streaming.py  face_recognition.py  face_recognition_image_buffer.py  head_pose_estimation.py  head_pose_estimation_live_streaming.py  my_database.db  object_detection.py  object_detection_live_streaming.py  readme.md  spoof_detection_live_streaming.py
python/video_redaction/: video_redaction.py
python_sdk/age-detection/: README.md
python_sdk/movement/: demo.py
python_sdk/object-detection/: demo.py  demo_with_mjpeg_streaming.py  demo_with_tracking.py  readme.md
python_sdk/spoof-detection/: demo.py  demo_image.py  readme.md
python_sdk/threat-detection/: predict_video.py  video_with_tracking.py
python_sdk_deprecated/: readme.md
python_sdk_deprecated/heatmaps/: demo.py  readme.md
python_sdk_deprecated/movement/: readme.md
python_sdk_deprecated/spoof-detection/: download_model.sh  readme.md
python_sdk_deprecated/threat-detection/: readme.md
temperature_detection_frontend/: README.md  main.py
(+139 files in other folders)
